Fixed spacing for meta Added styles for attachment icons and fixed attachment component

--- a/plugins/knowledge/src/scss/components/_attachmentIcons.scss
+++ b/plugins/knowledge/src/scss/components/_attachmentIcons.scss
@@ -4,6 +4,8 @@
  * @license GPL-2.0-only
  */
 
+$attachmentIcon_spacing: $utility-baseUnit / 2;
+
 .attachmentsIcons {
     display: block;
     position: relative;
@@ -14,11 +16,11 @@
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: flex-end;
-    width: calc(100% + #{$meta_spacing * 2});
+    width: calc(100% + #{$attachmentIcon_spacing * 2});
 
     margin: {
-        top: -#{$meta_spacing};
-        left: -#{$meta_spacing};
+        top: -#{$attachmentIcon_spacing};
+        left: -#{$attachmentIcon_spacing};
         right: $meta_spacing;
     }
 
@@ -26,5 +28,9 @@
 }
 
 .attachmentsIcons-item {
-    margin: $utility-baseUnit / 2;
+    margin: $attachmentIcon_spacing;
+}
+
+.attachmentsIcons-more {
+
 }
